src/test/ui/parser/macro/issue-37113.stderr
error: expected identifier, found `String`
  --> $DIR/issue-37113.rs:4:16
   |
LL |             $( $t, )*
   |                ^^ expected identifier
...
LL |     test_macro!(String,);
   |     -------------------- in this macro invocation
   |
   = note: this error originates in the macro `test_macro` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

